# portofolio-music-api

./: .dockerignore  .env.example  Cargo.toml  DEPLOY.md  Dockerfile  agent.md  docker-compose.yml
.claude/skills/rust/: SKILL.md
migrations/: 001_tokens.sql
mock_fixtures/: me.json  me_following.json  me_player.json  me_player_recently_played.json  me_playlists.json  me_top_tracks.json
src/: config.rs  lib.rs  main.rs  oauth.rs  state.rs
src/app/: activity.rs  cache.rs  mod.rs  scheduler.rs  snapshots.rs  spotify_service.rs  state_store.rs  v1_mapper.rs
src/domain/: auth_state.rs  mod.rs  oauth_client.rs  spotify.rs  spotify_toggle.rs  tokens.rs
src/infra/: http_logging.rs  mock_spotify_client.rs  mod.rs  spotify_backoff.rs  spotify_client.rs  spotify_governor.rs  spotify_retry.rs  sqlite_token_repo.rs  token_exchanger.rs
src/routes/: admin.rs  auth.rs  mod.rs  v1.rs
tests/: admin_spotify_refresh.rs  admin_spotify_toggle.rs  auth_constant_time.rs  config.rs  cors.rs  debug_redaction.rs  healthz.rs  healthz_degradation_tripwire.rs  mock_mode.rs  oauth.rs  oauth_flow.rs  oauth_flow_e2e.rs  refresh_ms_in_payload.rs  refresh_on_401.rs  refresh_on_401_end_to_end.rs  repository.rs  repository_pattern.rs  request_id.rs  reqwest_isolation.rs  scheduler_activity.rs  scheduler_loop.rs  single_flight_refresh.rs  single_flight_refresh_end_to_end.rs  snapshots.rs  spotify_backoff.rs  spotify_base_url.rs  spotify_layering.rs  spotify_pacing.rs  spotify_retry_after.rs  spotify_retry_after_paused_clock_tripwire.rs  spotify_retry_compose.rs  spotify_second_429_propagates.rs  spotify_toggle_disables_traffic.rs  sqlite_pool_options.rs  token_exchanger.rs  v1_endpoints.rs  v1_now.rs  v1_profile.rs
